# python-project-template

./: Makefile  pyproject.toml
notebooks/: notebook_setup.py
src/config/: config.py  logging_config.py
